chore: Update package.json
Signed-off-by: jshwi <stephen@jshwisolutions.com>

--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   },
   "homepage": "https://jshwi.github.io/repocutter/",
   "keywords": [
-    "cookiecutter",
-    "repo",
     "config",
-    "template",
-    "jinja2"
+    "cookiecutter",
+    "jinja2",
+    "repo",
+    "template"
   ],
   "license": "MIT",
   "name": "repocutter",
