--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,7 @@ pytest-randomly = "^3.11.0"
 restview = "^3.0.0"
 sphinx-toolbox = "^3.2.0"
 templatest = "^0.8.0"
+tomli-w = "^1.0.0"
 
 [tool.poetry.scripts]
 repocutter = "repocutter.__main__:main"
