--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,7 @@ pyaud = "^6.2.1"
 pylint = "2.16.3"
 pytest-randomly = "^3.11.0"
 restview = "^3.0.0"
+sphinx-immaterial = "^0.11.3"
 sphinx-toolbox = "^3.4.0"
 templatest = "^0.8.0"
 tomli-w = "^1.0.0"
