--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,6 +88,7 @@ pyaud = "^7.2.0"
 pylint = "2.15.9"
 pytest-randomly = "^3.11.0"
 restview = "^3.0.0"
+sphinx-immaterial = "^0.11.3"
 sphinx-toolbox = "^3.2.0"
 templatest = "^0.8.0"
 tomli-w = "^1.0.0"
