--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,8 @@ repocutter = "repocutter.__main__:main"
 
 [tool.pyaud]
 audit = [
+  "about-tests",
+  "commit-policy",
   "const",
   "docs",
   "files",
