--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ tomli = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 bump2version = "^1.0.1"
+deptry = "^0.12.0"
 ipython = "^8.6.0"
 pre-commit = "^2.21.0"
 pyaud = "^7.2.0"
