doc: add readme for commit policy
Signed-off-by: Stephen Whitlock <stephen@jshwisolutions.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,6 +98,7 @@ repocutter = "repocutter.__main__:main"
 [tool.pyaud]
 audit = [
   "about-tests",
+  "commit-policy",
   "const",
   "docs",
   "files",
