--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,7 +79,7 @@ object-colors = "^2.2.0"
 python = "^3.8"
 tomli = "^2.0.1"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 bump2version = "^1.0.1"
 deptry = "^0.12.0"
 ipython = "^8.12.3"
